2011-10-18 Borut Razem <borut.razem AT gmail.com>

	* doc/sdccman.lyx: changed MS Visual C++ 6.0 to MS Visual C++ 2010,
	  reverted to LyX version 1.6.7 format, as prpbosed by Robert Larice

2011-10-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* Makefile.in:
	  Fixed bug #3424968.

2011-10-17 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/iso646.h,
	  support/regression/tests/iso646.c:
	  Added macros required by C99  (this header is now C99-compliant).
	* device/include/limits.h:
	  Removed UCHAR_MIN, added macros for long long (this header is now C99-compliant).
	* device/include/stdint.h:
	  Code cleanup, added macros for 64 bit integers, wchar_t and wint_t (this header is now C99-compliant except for intmax_t and uintmax_t having less than 64 bits).
	* device/include/string.h:
	  Renamed namespace-polluting _SIZE_T_DEFINED.
	* device/include/stddef.h:
	  Renamed namespace-polluting _SIZE_T_DEFINED, added ptrdiff_t and wchar_t (this header is now C99-compliant).
	* device/include/stdio.h:
	  Renamed namespace-polluting _SIZE_T_DEFINED.
	* device/include/stdarg.h,
	  support/regression/tests/vaargs.c:
	  Fixed va_end, added va_copy (this header is now C99-compliant).

2011-10-16 Borut Razem <borut.razem AT gmail.com>

	* support/scripts/sdcc.nsi: added dedication to Dennis M. Ritchie
	* support/cpp/c-ppoutput.c:
	  fixed bug #3408654: SDCC shows wrong line number in warning 94:
	  disabled # LINE directive generation in __asm __endasm block

2011-10-16 Raphael Neider <rneider AT web.de>

	* device/include/pic16/i2c.h,
	* device/lib/pic16/libio/i2c/i2cwritec.c:
	  addressed issues from #3413443
	* device/include/pic16/adc.h,
	* device/lib/pic16/libio/adc/adcopen.c:
	  addressed issues from #3409666

2011-10-16 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/collate-results.py,
	  support/regression/compact-results.py: fixed bug #3413437

2011-10-15 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,